override jnlp container configuration to enforce limits and JAVA_TOOL_OPTIONS